{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 63,
  "lineage": "9fdcb231-8eba-52c1-921b-95c8bdadfaf3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0742e0365f0d7a06b",
            "arn": "arn:aws:ec2:eu-west-2:339712876743:elastic-ip/eipalloc-0742e0365f0d7a06b",
            "domain": "vpc",
            "id": "eipalloc-0742e0365f0d7a06b",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-3-10-46-195.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.10.46.195",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Elastic-Ip - 1"
            },
            "tags_all": {
              "Name": "Elastic-Ip - 1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e6422635410b9bfd",
            "arn": "arn:aws:ec2:eu-west-2:339712876743:elastic-ip/eipalloc-0e6422635410b9bfd",
            "domain": "vpc",
            "id": "eipalloc-0e6422635410b9bfd",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-3-8-60-226.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.8.60.226",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Elastic-Ip - 2"
            },
            "tags_all": {
              "Name": "Elastic-Ip - 2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:339712876743:internet-gateway/igw-0403651bb15cf62be",
            "id": "igw-0403651bb15cf62be",
            "owner_id": "339712876743",
            "tags": {
              "Name": "IGW"
            },
            "tags_all": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-0c1d090d5235cbe6f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0742e0365f0d7a06b",
            "association_id": "eipassoc-08fc91ee332690128",
            "connectivity_type": "public",
            "id": "nat-063b31874eadcfaf7",
            "network_interface_id": "eni-08a853f04b886e50c",
            "private_ip": "10.0.2.22",
            "public_ip": "3.10.46.195",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06fac6fd0f017aa7e",
            "tags": {
              "Name": "gw NAT 1"
            },
            "tags_all": {
              "Name": "gw NAT 1"
            }
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.igw",
            "aws_subnet.publicsubnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available_area"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e6422635410b9bfd",
            "association_id": "eipassoc-0b613df1aaf07935a",
            "connectivity_type": "public",
            "id": "nat-0dbc867e23f72c6c2",
            "network_interface_id": "eni-026402a0325b7c690",
            "private_ip": "10.0.40.154",
            "public_ip": "3.8.60.226",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ab3e75cd7312cf8c",
            "tags": {
              "Name": "gw NAT 2"
            },
            "tags_all": {
              "Name": "gw NAT 2"
            }
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.igw",
            "aws_subnet.publicsubnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available_area"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:339712876743:route-table/rtb-023e837bb1467e3e4",
            "id": "rtb-023e837bb1467e3e4",
            "owner_id": "339712876743",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-063b31874eadcfaf7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-RT - 0"
            },
            "tags_all": {
              "Name": "Private-RT - 0"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1d090d5235cbe6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-gateway",
            "aws_subnet.publicsubnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available_area"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:339712876743:route-table/rtb-06b9c1eee1e1f4adf",
            "id": "rtb-06b9c1eee1e1f4adf",
            "owner_id": "339712876743",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0dbc867e23f72c6c2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-RT - 1"
            },
            "tags_all": {
              "Name": "Private-RT - 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1d090d5235cbe6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-gateway",
            "aws_subnet.publicsubnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available_area"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:339712876743:route-table/rtb-0dd6e243955bd4b93",
            "id": "rtb-0dd6e243955bd4b93",
            "owner_id": "339712876743",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0403651bb15cf62be",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-RouteTable",
              "Team": "Dev"
            },
            "tags_all": {
              "Name": "Public-RouteTable",
              "Team": "Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1d090d5235cbe6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateassociate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8662d8c4e0dee35",
            "route_table_id": "rtb-023e837bb1467e3e4",
            "subnet_id": "subnet-044ce9e2fa4c4da40"
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-gateway",
            "aws_route_table.private-rt",
            "aws_subnet.privatesubnet",
            "aws_subnet.publicsubnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available_area"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0362989422b762bff",
            "route_table_id": "rtb-06b9c1eee1e1f4adf",
            "subnet_id": "subnet-0ea6a297548d3d80f"
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-gateway",
            "aws_route_table.private-rt",
            "aws_subnet.privatesubnet",
            "aws_subnet.publicsubnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available_area"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicassociate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb71826fd3e0fd45",
            "route_table_id": "rtb-0dd6e243955bd4b93",
            "subnet_id": "subnet-06fac6fd0f017aa7e"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_subnet.publicsubnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available_area"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0444f5817cf79a4ad",
            "route_table_id": "rtb-0dd6e243955bd4b93",
            "subnet_id": "subnet-0ab3e75cd7312cf8c"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_subnet.publicsubnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available_area"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:339712876743:subnet/subnet-044ce9e2fa4c4da40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044ce9e2fa4c4da40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712876743",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet - 1",
              "Team": "Dev"
            },
            "tags_all": {
              "Name": "Private-Subnet - 1",
              "Team": "Dev"
            },
            "vpc_id": "vpc-0c1d090d5235cbe6f"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available_area"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:339712876743:subnet/subnet-0ea6a297548d3d80f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.128.0/17",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea6a297548d3d80f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712876743",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet - 2",
              "Team": "Dev"
            },
            "tags_all": {
              "Name": "Private-Subnet - 2",
              "Team": "Dev"
            },
            "vpc_id": "vpc-0c1d090d5235cbe6f"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available_area"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:339712876743:subnet/subnet-06fac6fd0f017aa7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fac6fd0f017aa7e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339712876743",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet - 1",
              "Team": "Dev"
            },
            "tags_all": {
              "Name": "Public-Subnet - 1",
              "Team": "Dev"
            },
            "vpc_id": "vpc-0c1d090d5235cbe6f"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available_area"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:339712876743:subnet/subnet-0ab3e75cd7312cf8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab3e75cd7312cf8c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339712876743",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet - 2",
              "Team": "Dev"
            },
            "tags_all": {
              "Name": "Public-Subnet - 2",
              "Team": "Dev"
            },
            "vpc_id": "vpc-0c1d090d5235cbe6f"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available_area"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:339712876743:vpc/vpc-0c1d090d5235cbe6f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03e58e5c2842f9a34",
            "default_route_table_id": "rtb-00306f4b553c9e584",
            "default_security_group_id": "sg-02ba589981b5cd99f",
            "dhcp_options_id": "dopt-06700c01f36b46cd9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c1d090d5235cbe6f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00306f4b553c9e584",
            "owner_id": "339712876743",
            "tags": {
              "Name": "Demo-VPC",
              "Team": "Dev"
            },
            "tags_all": {
              "Name": "Demo-VPC",
              "Team": "Dev"
            }
          }
        }
      ]
    }
  ]
}